--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Hom</a></li>
                     <li><a href="product.html">Products</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
